--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "image-size": "^1.0.2",
     "jimp": "^0.16.2",
     "ncp": "^2.0.0",
-    "node-base64-image": "^2.0.4"
+    "node-base64-image": "^2.0.4",
+    "shelljs": "^0.8.5"
   }
 }
